--- a/Blog/Blog/Views/Account/Index.cshtml
+++ b/Blog/Blog/Views/Account/Index.cshtml
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="usrName">Last Name:</label>
+                        <label for="usrName">User Name:</label>
                     </td>
                     <td>
                         @Html.DropDownList("usrName", "All")
@@ -54,7 +54,7 @@
 <table class="table">
     @if (!Model.Any())
     {
-        <tr><td>There are no posts found</td></tr>
+        <tr><td>There are no Managers found</td></tr>
     }
     else
     {
