--- a/Blog/Blog/Views/Map/Index.cshtml
+++ b/Blog/Blog/Views/Map/Index.cshtml
@@ -58,7 +58,7 @@
 <table class="table">
     @if (!Model.Any())
     {
-        <tr><td>There are no posts found</td></tr>
+        <tr><td>There are no Locations found</td></tr>
     }
     else
     {
