--- a/Blog/Blog/Styles/base.css
+++ b/Blog/Blog/Styles/base.css
@@ -29,9 +29,10 @@ body {
 }
 h1#title {
 	text-shadow: 3px 3px #DDDDDD;
-	font-size: 20px;
+	font-size: 40px;
 	text-decoration: underline;
 	color: mediumseagreen;
+    width: auto;
 }
 h1, h2 {
 	font-size: 28px;
@@ -369,6 +370,15 @@ aside section ul li a:hover {
 /*------------------------------
 =BLOG POST
 ------------------------------*/
+#posts article{
+	padding: 15px;
+	background-color: antiquewhite;
+	border: 1px solid #d7d7d7;
+	-moz-border-radius: 11px;
+	-webkit-border-radius: 11px;
+}
+
+
 .blogPost header p, .blogPost header p a {
 	font-size: 14px;
 	font-style: italic;
@@ -512,7 +522,7 @@ form label {
 	
 form input[type="text"], form input[type="email"], form input[type="url"] {
 	display: table-cell;
-	width: 300px;
+	width: 240px;
 	height: 20px;
 	border: 1px solid #d7d7d7;
 	text-align: left;
